使用eventBus完成单个和多个开关

--- a/index.html
+++ b/index.html
@@ -44,35 +44,41 @@
         border: 1px solid #999999;
     }
 </style>
-<div id="app">
-    <q-tabs :selected.sync="selectedTab">
-        <q-tabs-head>
-            <template v-slot:actions>
-                <button>设置</button>
-            </template>
-            <q-tabs-item name="woman">
-                <q-icon name="setting"></q-icon>
-                美女
-            </q-tabs-item>
-            <q-tabs-item name="finance" disabled>
-                财经
-            </q-tabs-item>
-            <q-tabs-item name="sports">
-                体育
-            </q-tabs-item>
-        </q-tabs-head>
-        <q-tabs-body>
-            <q-tabs-pane name="woman">
-                美女相关资讯
-            </q-tabs-pane>
-            <q-tabs-pane name="finance">
-                财经相关资讯
-            </q-tabs-pane>
-            <q-tabs-pane name="sports">
-                体育相关资讯
-            </q-tabs-pane>
-        </q-tabs-body>
-    </q-tabs>
+<div id="app" style="width: 500px;padding: 50px">
+    <q-collapse >
+        <q-collapse-item title="标题1">内容1</q-collapse-item>
+        <q-collapse-item title="标题2">内容2</q-collapse-item>
+        <q-collapse-item title="标题3">内容3</q-collapse-item>
+    </q-collapse>
+
+<!--    <q-tabs :selected.sync="selectedTab">-->
+<!--        <q-tabs-head>-->
+<!--            <template v-slot:actions>-->
+<!--                <button>设置</button>-->
+<!--            </template>-->
+<!--            <q-tabs-item name="woman">-->
+<!--                <q-icon name="setting"></q-icon>-->
+<!--                美女-->
+<!--            </q-tabs-item>-->
+<!--            <q-tabs-item name="finance" disabled>-->
+<!--                财经-->
+<!--            </q-tabs-item>-->
+<!--            <q-tabs-item name="sports">-->
+<!--                体育-->
+<!--            </q-tabs-item>-->
+<!--        </q-tabs-head>-->
+<!--        <q-tabs-body>-->
+<!--            <q-tabs-pane name="woman">-->
+<!--                美女相关资讯-->
+<!--            </q-tabs-pane>-->
+<!--            <q-tabs-pane name="finance">-->
+<!--                财经相关资讯-->
+<!--            </q-tabs-pane>-->
+<!--            <q-tabs-pane name="sports">-->
+<!--                体育相关资讯-->
+<!--            </q-tabs-pane>-->
+<!--        </q-tabs-body>-->
+<!--    </q-tabs>-->
 
     <!--<q-layout style="height: 100vh">-->
     <!--    <q-sider class="demo1" style="width: 200px">sider</q-sider>-->
