--- a/index.html
+++ b/index.html
@@ -156,23 +156,23 @@
     <!--    </div>-->
 
         <button @click="add">dianwo</button>
-        <q-input></q-input>
-        <q-input readonly></q-input>
-        <q-input disabled></q-input>
-        <q-input error="xxx"></q-input>
-        <q-input v-model="xxx"></q-input>
-        <div>
-            <q-button :loading="loading1" icon="setting" @click="loading1=!loading1">按钮1</q-button>
-            <q-button :loading="loading2" @click="loading2=!loading2">按钮2</q-button>
-            <q-button :loading="loading3" icon-position="right" icon="setting" @click="loading3=!loading3">按钮3</q-button>
+<!--        <q-input></q-input>-->
+<!--        <q-input readonly></q-input>-->
+<!--        <q-input disabled></q-input>-->
+<!--        <q-input error="xxx"></q-input>-->
+<!--        <q-input v-model="xxx"></q-input>-->
+<!--        <div>-->
+<!--            <q-button :loading="loading1" icon="setting" @click="loading1=!loading1">按钮1</q-button>-->
+<!--            <q-button :loading="loading2" @click="loading2=!loading2">按钮2</q-button>-->
+<!--            <q-button :loading="loading3" icon-position="right" icon="setting" @click="loading3=!loading3">按钮3</q-button>-->
             <q-button-group>
                 <q-button icon="left">上一页</q-button>
                 <q-button>更多</q-button>
                 <q-button icon-position="right" icon="right">下一页</q-button>
             </q-button-group>
-        </div>
+<!--        </div>-->
 </div>
-<script src="https://at.alicdn.com/t/font_2374002_wg6lx2my1qq.js"></script>
+<script src="./src/svg.js"></script>
 <script src="./src/app.js"></script>
 </body>
 </html>
